hphp/hack/test/typecheck/array/disallow_incompatible_type_parameter_for_varray.php.exp
File "disallow_incompatible_type_parameter_for_varray.php", line 4, characters 10-21:
Incompatible field values (Typing[4110])
File "disallow_incompatible_type_parameter_for_varray.php", line 3, characters 25-27:
This is an int
File "disallow_incompatible_type_parameter_for_varray.php", line 4, characters 17-20:
It is incompatible with a bool
