hphp/hack/test/typecheck/array/disallow_incompatible_type_parameter_for_varray.php
<?hh

function test(): varray<int> {
  return varray[true];
}
